{
    "name": "New Controls",
    "maps": [
        {
            "name": "CharacterControl",
            "id": "5c1e21e3-efa4-42e7-8e0f-8ca38142ac35",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "9f567205-baae-4799-ad74-f5083ada7479",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "run",
                    "type": "Button",
                    "id": "2cfd2dfb-2940-4c0a-804b-97679077b593",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "58eeca13-7128-4364-9ba6-86517d3c63ad",
                    "path": "<Keyboard>/w",
                    "interactions": "Press(behavior=2)",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d63bcc6-3c39-4424-afaa-e62c177fa00f",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}